--- a/Merge_Word_List_Files.ipynb
+++ b/Merge_Word_List_Files.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSVファイルの結合が完了しました: output/Merged_Word_list.csv\n"
+      "CSVファイルの結合が完了しました: output/Value/Merged_Word_list_Value.csv\n"
      ]
     }
    ],
@@ -19,10 +19,10 @@
     "import pandas as pd\n",
     "\n",
     "# 結合するCSVファイルが格納されているフォルダのパス\n",
-    "folder_path = \"output/\"\n",
-    "\n",
+    "folder_path = \"output/Value/Word_list\"\n",
+    "outputfolder_path = \"output/Value\"\n",
     "# 結合後のCSVファイルの出力パス\n",
-    "output_file = os.path.join(folder_path, \"Merged_Word_list.csv\")\n",
+    "output_file = os.path.join(outputfolder_path, \"Merged_Word_list_Value.csv\")\n",
     "\n",
     "# ファイル名に\"_Word_list.csv\"を含むCSVファイルを取得\n",
     "csv_files = [os.path.join(folder_path, f) for f in os.listdir(folder_path) if f.endswith(\"_Word_list.csv\")]\n",
