--- a/tf-idf.ipynb
+++ b/tf-idf.ipynb
@@ -20,7 +20,7 @@
     "# 読み込むcsvファイル名を記載したリストファイル指定\n",
     "filename=\"token_list.txt\"\n",
     "#filename=\"token_list2.txt\"\n",
-    "list_file= \"data/\" + filename\n",
+    "list_file= \"output/IP/tf-idf/\" + filename\n",
     "\n",
     "# リストに格納\n",
     "with open(list_file, \"r\") as file:\n",
@@ -31,11 +31,12 @@
     "\n",
     "# 空のリストに各CSVファイルから読み込んだデータフレームを格納\n",
     "dataframes = []\n",
-    "file_folder='output/'\n",
+    "file_folder='output/IP/tf-idf/'\n",
     "\n",
     "# CSVファイルをループして読み込む\n",
     "for file in csv_files:\n",
     "    file_path = file_folder + file\n",
+    "    #print(file_path)\n",
     "    if os.path.exists(file_path):  # ファイルが存在するか確認\n",
     "        df = pd.read_csv(file_path)  # CSVファイルを読み込む\n",
     "        dataframes.append(df)  # データフレームをリストに追加\n",
@@ -105,7 +106,7 @@
     "date_time_string = now.strftime(\"%Y%m%d_%H%M%S\")\n",
     "\n",
     "#ファイル出力\n",
-    "file_name_tfidf = f\"output/{date_time_string}_tf-idf.csv\"\n",
+    "file_name_tfidf = f\"output/IP/tf-idf/{date_time_string}_tf-idf.csv\"\n",
     "df_combined.to_csv(file_name_tfidf, encoding=\"utf_8_sig\", index=False)"
    ]
   }
