--- a/ターゲット共起抽出_20241010.ipynb
+++ b/ターゲット共起抽出_20241010.ipynb
@@ -10,10 +10,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            1番目   2番目  count\n",
-      "2757       ROIC   新製品      3\n",
-      "14811  ステークホルダー  技術戦略      1\n",
-      "14919  ステークホルダー  技術革新      1\n"
+      "             1番目    2番目  count\n",
+      "13003       ROIC    成長性      9\n",
+      "13018       ROIC    新事業      9\n",
+      "18822        ROE     特許      6\n",
+      "21964       ROIC    新製品      6\n",
+      "23234        ROE   成長戦略      5\n",
+      "26801       ROIC    競争力      5\n",
+      "26983        新事業     株式      5\n",
+      "28020        収益性    成長性      4\n",
+      "29259        投資家     特許      4\n",
+      "34227   ステークホルダー    新事業      4\n",
+      "35613         株式    競争力      4\n",
+      "35844        成長性     株式      4\n",
+      "36012        収益力    新事業      4\n",
+      "40282   ステークホルダー     特許      3\n",
+      "40292         株式     特許      3\n",
+      "40297        収益力     特許      3\n",
+      "41131        ROE  次世代技術      3\n",
+      "41139        ROE   先端技術      3\n",
+      "41179        ROE     知財      3\n",
+      "44709       成長戦略     株式      3\n",
+      "46965   ステークホルダー    競争力      3\n",
+      "49431        ROE    成長性      3\n",
+      "49769       ROIC     特許      3\n",
+      "49770       ROIC     知財      3\n",
+      "50057        収益性    新事業      3\n",
+      "57761        投資家  次世代技術      2\n",
+      "57771       先端技術    投資家      2\n",
+      "57824        投資家     知財      2\n",
+      "57846       成長戦略    投資家      2\n",
+      "65248   ステークホルダー     知財      2\n",
+      "66063         株式     知財      2\n",
+      "66355        収益力     知財      2\n",
+      "66359        収益力   成長戦略      2\n",
+      "74131    ビジネスモデル   成長戦略      2\n",
+      "76591        ROE    競争力      2\n",
+      "78816        収益性    競争力      2\n",
+      "79321        M&A    新事業      2\n",
+      "79426    ビジネスモデル    新事業      2\n",
+      "110128  ステークホルダー  次世代技術      1\n",
+      "110136  ステークホルダー   先端技術      1\n",
+      "110193  ステークホルダー   成長戦略      1\n",
+      "110826        株式  次世代技術      1\n",
+      "110842       収益力  次世代技術      1\n",
+      "111679      先端技術     株式      1\n",
+      "111694      先端技術    収益力      1\n",
+      "120995        協調     金融      1\n",
+      "132415       ROE    事業化      1\n",
+      "141502       M&A    競争力      1\n",
+      "141504       投資家    競争力      1\n",
+      "143498       M&A    成長性      1\n"
      ]
     }
    ],
@@ -26,7 +73,10 @@
     "target_folder ='output/'\n",
     "keywords1 ='Keywords1.csv'\n",
     "keywords2 ='Keywords2.csv'\n",
-    "target_file ='69020_デンソー_20241008-170737_Co_Occurrence.csv'\n",
+    "\n",
+    "target_file ='69020_デンソー_20241008-170643_Co_Occurrence.csv'#Value\n",
+    "#target_file ='69020_デンソー_20241008-170737_Co_Occurrence.csv'#IP\n",
+    "#target_file ='69020_デンソー_20241008-170504_Co_Occurrence.csv'#Management\n",
     "\n",
     "filename = target_folder + target_file\n",
     "ourput_filename = target_folder +target_file.replace('.csv','') +'_filtered.csv'\n",
