--- a/D_Centrality_histogram_Value.ipynb
+++ b/D_Centrality_histogram_Value.ipynb
@@ -2,27 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "80194960-6df0-4750-8584-e36933865315",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "# キーワードリストを読み込む\n",
-    "keywords_df = pd.read_csv('output/Value/Keywords1.csv', encoding='utf-8-sig')\n",
-    "keywords_list = keywords_df['KW'].tolist()\n",
+    "keywords_df = pd.read_csv('output/Denso/Keywords1.csv', encoding='utf-8-sig')\n",
+    "keywords_list = keywords_df.iloc[:, 0].tolist()\n",
     "\n",
     "# データを格納するリストを作成\n",
     "data = []\n",
     "\n",
     "# CSVファイルが入っているフォルダを指定\n",
-    "folder_path = 'output/Value/Centrality'\n",
+    "folder_path = 'output/Denso'\n",
     "\n",
     "# フォルダ内のCSVファイルを全て取得\n",
-    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('.csv')]\n",
+    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241008-170643_Centrality_350.csv')]\n",
     "\n",
     "# 各CSVファイルを処理\n",
     "for file in csv_files:\n",
@@ -50,7 +60,7 @@
     "        for _, row in filtered_df.iterrows():\n",
     "            data.append({\n",
     "                '企業コード': company_code,\n",
-    "                '銘柄名': stock_name,\n",
+    "                '企業名': stock_name,\n",
     "                'Node': row['Node'],\n",
     "                'Degree Centrality': row['Degree Centrality'],\n",
     "                'Betweenness Centrality': row['Betweenness Centrality'],\n",
@@ -65,7 +75,7 @@
     "\n",
     "# リストからデータフレームを作成\n",
     "output_df = pd.DataFrame(data, columns=[\n",
-    "    '企業コード', '銘柄名', 'Node', 'Degree Centrality', 'Betweenness Centrality', \n",
+    "    '企業コード', '企業名', 'Node', 'Degree Centrality', 'Betweenness Centrality', \n",
     "    'Closeness Centrality', 'Eigenvector Centrality',\n",
     "    'Rank_Degree Centrality', 'Rank_Betweenness Centrality', \n",
     "    'Rank_Closeness Centrality', 'Rank_Eigenvector Centrality', 'Community'\n",
@@ -78,7 +88,7 @@
     "histogram_data = []\n",
     "\n",
     "# 各企業コードと銘柄名ごとにデータを集計\n",
-    "for (company_code, stock_name), group in output_df.groupby(['企業コード', '銘柄名']):\n",
+    "for (company_code, stock_name), group in output_df.groupby(['企業コード', '企業名']):\n",
     "    # 各Centralityについてヒストグラムを作成\n",
     "    for centrality in ['Rank_Degree Centrality','Rank_Betweenness Centrality', 'Rank_Closeness Centrality', 'Rank_Eigenvector Centrality']:\n",
     "        # 順位が計算されていない場合はスキップ\n",
@@ -97,7 +107,7 @@
     "            for i in range(len(counts)):\n",
     "                histogram_data.append({\n",
     "                    'コード': company_code,\n",
-    "                    '銘柄名': stock_name,\n",
+    "                    '企業名': stock_name,\n",
     "                    '順位範囲': f'{bin_edges[i]}-{bin_edges[i+1]-1}',\n",
     "                    f'順位個数_{centrality.split(\"_\")[-1]}': counts[i]\n",
     "                })\n",
@@ -106,9 +116,37 @@
     "\n",
     "# リストからヒストグラムのデータフレームを作成\n",
     "histogram_df = pd.DataFrame(histogram_data)\n",
+    "print(histogram_df)\n",
+    "\n",
+    "# Define columns that would be in the pivoted DataFrame\n",
+    "pivot_columns = [\n",
+    "    'コード', '企業名', '順位範囲', \n",
+    "    '順位個数_Degree Centrality', \n",
+    "    '順位個数_Betweenness Centrality', \n",
+    "    '順位個数_Closeness Centrality', \n",
+    "    '順位個数_Eigenvector Centrality'\n",
+    "]\n",
+    "\n",
+    "# Check if histogram_df is None or empty\n",
+    "if histogram_df is None or histogram_df.empty:\n",
+    "    # Create an empty DataFrame with the correct columns\n",
+    "    pivoted_histogram_df = pd.DataFrame(columns=pivot_columns)\n",
+    "else:\n",
+    "    # Perform the pivot operation\n",
+    "    pivoted_histogram_df = histogram_df.pivot_table(\n",
+    "        index=['コード', '企業名', '順位範囲'], \n",
+    "        values=[\n",
+    "            '順位個数_Degree Centrality', \n",
+    "            '順位個数_Betweenness Centrality', \n",
+    "            '順位個数_Closeness Centrality', \n",
+    "            '順位個数_Eigenvector Centrality'\n",
+    "        ], \n",
+    "        aggfunc='sum', \n",
+    "        fill_value=0\n",
+    "    ).reset_index()\n",
     "\n",
     "# ヒストグラムの結果をCSVファイルに保存\n",
-    "histogram_df.to_csv('output/Value/centrality_histogram_Value.csv', index=False, encoding='utf-8-sig')\n"
+    "pivoted_histogram_df.to_csv('output/Denso/centrality_histogram_Value.csv', index=False, encoding='utf-8-sig')\n"
    ]
   },
   {
