--- a/D_Rank_Centrality_IP.ipynb
+++ b/D_Rank_Centrality_IP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a0d43a9d-a412-467a-8362-251afc9ad987",
    "metadata": {},
    "outputs": [],
@@ -11,17 +11,17 @@
     "import pandas as pd\n",
     "\n",
     "# キーワードリストを読み込む\n",
-    "keywords_df = pd.read_csv('output/Keywords1.csv', encoding='utf-8-sig')\n",
-    "keywords_list = keywords_df[0'].tolist()\n",
+    "keywords_df = pd.read_csv('output/Denso/Keywords1.csv', encoding='utf-8-sig')\n",
+    "keywords_list = keywords_df.iloc[:, 0].tolist()\n",
     "\n",
     "# データを格納するリストを作成\n",
     "data = []\n",
     "\n",
     "# CSVファイルが入っているフォルダを指定\n",
-    "folder_path = 'output/IP/Centrality'\n",
+    "folder_path = 'output/Denso/'\n",
     "\n",
     "# フォルダ内のCSVファイルを全て取得\n",
-    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('.csv')]\n",
+    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241008-170737_Centrality_350.csv')]\n",
     "\n",
     "# 各CSVファイルを処理\n",
     "for file in csv_files:\n",
@@ -45,7 +45,7 @@
     "        for _, row in filtered_df.iterrows():\n",
     "            data.append({\n",
     "                '企業コード': company_code,\n",
-    "                '銘柄名': stock_name,\n",
+    "                '企業名': stock_name,\n",
     "                'Node': row['Node'],\n",
     "                'Degree Centrality': row['Degree Centrality'],\n",
     "                'Betweenness Centrality': row['Betweenness Centrality'],\n",
@@ -60,20 +60,28 @@
     "\n",
     "# リストからデータフレームを作成\n",
     "output_df = pd.DataFrame(data, columns=[\n",
-    "    '企業コード', '銘柄名', 'Node', 'Degree Centrality', 'Betweenness Centrality', \n",
+    "    '企業コード', '企業名', 'Node', 'Degree Centrality', 'Betweenness Centrality', \n",
     "    'Closeness Centrality', 'Eigenvector Centrality',\n",
     "    'Rank_Degree Centrality', 'Rank_Betweenness Centrality', \n",
     "    'Rank_Closeness Centrality', 'Rank_Eigenvector Centrality', 'Community'\n",
     "])\n",
     "\n",
     "# 結果をCSVファイルに保存\n",
-    "output_df.to_csv('output/IP/aggregated_centralities_ip.csv', index=False, encoding='utf-8-sig')\n"
+    "output_df.to_csv('output/Denso/aggregated_centralities_ip.csv', index=False, encoding='utf-8-sig')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fe2a7aff-79dd-464e-a211-c955137540ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dc911d1-96cd-40c1-a81f-23e837337793",
    "metadata": {},
    "outputs": [],
    "source": []
