--- a/D_Rank_Centrality_Value.ipynb
+++ b/D_Rank_Centrality_Value.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "a0d43a9d-a412-467a-8362-251afc9ad987",
    "metadata": {},
    "outputs": [],
@@ -11,22 +11,25 @@
     "import pandas as pd\n",
     "\n",
     "# キーワードリストを読み込む\n",
-    "keywords_df = pd.read_csv('output/Value/Keywords1.csv', encoding='utf-8-sig')\n",
-    "keywords_list = keywords_df['KW'].tolist()\n",
+    "keywords_df = pd.read_csv('output/Denso/Keywords1.csv', encoding='utf-8-sig')\n",
+    "keywords_list = keywords_df.iloc[:, 0].tolist()\n",
+    "#print(keywords_list)\n",
     "\n",
     "# データを格納するリストを作成\n",
     "data = []\n",
     "\n",
     "# CSVファイルが入っているフォルダを指定\n",
-    "folder_path = 'output/Value/Centrality'\n",
+    "folder_path = 'output/Denso/'\n",
     "\n",
     "# フォルダ内のCSVファイルを全て取得\n",
-    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('.csv')]\n",
+    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241008-170643_Centrality_350.csv')]\n",
+    "#print(csv_files)\n",
     "\n",
     "# 各CSVファイルを処理\n",
     "for file in csv_files:\n",
     "    file_path = os.path.join(folder_path, file)\n",
     "    df = pd.read_csv(file_path)\n",
+    "    #print(df.head())\n",
     "    \n",
     "    # ファイル名から企業コード、銘柄名、リンク件数を抽出\n",
     "    parts = file.split('_')\n",
@@ -37,15 +40,16 @@
     "        # 各Nodeについて順位付けを実施\n",
     "        for centrality in ['Degree Centrality', 'Betweenness Centrality', 'Closeness Centrality', 'Eigenvector Centrality']:\n",
     "            df[f'Rank_{centrality}'] = df[centrality].rank(ascending=False, method='min')\n",
-    "        \n",
+    "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    \n",
     "        # キーワードリストに含まれるNodeのレコードを抽出\n",
     "        filtered_df = df[df['Node'].isin(keywords_list)]\n",
-    "        \n",
+    "        #print(df.head())\n",
+    "        # print(filtered_df.head())\n",
     "        # 必要な情報をリストに追加\n",
     "        for _, row in filtered_df.iterrows():\n",
     "            data.append({\n",
     "                '企業コード': company_code,\n",
-    "                '銘柄名': stock_name,\n",
+    "                '企業名': stock_name,\n",
     "                'Node': row['Node'],\n",
     "                'Degree Centrality': row['Degree Centrality'],\n",
     "                'Betweenness Centrality': row['Betweenness Centrality'],\n",
@@ -60,20 +64,28 @@
     "\n",
     "# リストからデータフレームを作成\n",
     "output_df = pd.DataFrame(data, columns=[\n",
-    "    '企業コード', '銘柄名', 'Node', 'Degree Centrality', 'Betweenness Centrality', \n",
+    "    '企業コード', '企業名', 'Node', 'Degree Centrality', 'Betweenness Centrality', \n",
     "    'Closeness Centrality', 'Eigenvector Centrality',\n",
     "    'Rank_Degree Centrality', 'Rank_Betweenness Centrality', \n",
     "    'Rank_Closeness Centrality', 'Rank_Eigenvector Centrality', 'Community'\n",
     "])\n",
     "\n",
     "# 結果をCSVファイルに保存\n",
-    "output_df.to_csv('output/Value/aggregated_centralities_value.csv', index=False, encoding='utf-8-sig')\n"
+    "output_df.to_csv('output/Denso/aggregated_centralities_value.csv', index=False, encoding='utf-8-sig')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fe2a7aff-79dd-464e-a211-c955137540ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ac2e959-69bc-462f-8da4-df7c953d1ca8",
    "metadata": {},
    "outputs": [],
    "source": []
