--- a/D_Word_ranking.ipynb
+++ b/D_Word_ranking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "38aca94a-8a31-4e61-8633-d8cf1f3bb62f",
    "metadata": {},
    "outputs": [
@@ -23,11 +23,11 @@
     "from pathlib import Path\n",
     "\n",
     "# 2. \"_Word_list.csv\"ファイルを読み込む\n",
-    "file_path = 'output/'#Value/Word_list'  # フォルダのパスを指定してください\n",
+    "file_path = 'output/Denso/'#Value/Word_list'  # フォルダのパスを指定してください\n",
     "word_list_files = glob.glob(f\"{file_path}/*20241008-170643_Word_list.csv\")\n",
     "\n",
     "# Keyword1.csvを読み込む\n",
-    "keyword_df = pd.read_csv('output/Keywords1.csv', header=None)\n",
+    "keyword_df = pd.read_csv('output/Denso/Keywords1.csv', header=None)\n",
     "keywords = keyword_df[0].tolist()\n",
     "\n",
     "results = []\n",
@@ -49,7 +49,7 @@
     "    # ヒストグラムを計算するための準備\n",
     "    industry_code = matched_df['業種'].iloc[0]\n",
     "    stock_code = matched_df['コード'].iloc[0]\n",
-    "    stock_name = matched_df['銘柄名'].iloc[0]\n",
+    "    stock_name = matched_df['企業名'].iloc[0]\n",
     "    analysis_range = matched_df['分析範囲'].iloc[0]\n",
     "    \n",
     "    # ヒストグラム計算（幅100）\n",
@@ -65,7 +65,7 @@
     "        histogram_results.append({\n",
     "            '業種': industry_code,\n",
     "            'コード': stock_code,\n",
-    "            '銘柄名': stock_name,\n",
+    "            '企業名': stock_name,\n",
     "            '分析範囲': analysis_range,\n",
     "            '順位範囲': bin_range,\n",
     "            '件数': count\n",
@@ -75,13 +75,13 @@
     "final_df = pd.concat(results)\n",
     "\n",
     "# 結果をCSVに出力\n",
-    "final_df.to_csv('output/D_aggregated_rank_results_value.csv', index=False, encoding='utf-8-sig')\n",
+    "final_df.to_csv('output/Denso/D_aggregated_rank_results_value.csv', index=False, encoding='utf-8-sig')\n",
     "\n",
     "# ヒストグラム結果をデータフレームにまとめる\n",
     "histogram_df = pd.DataFrame(histogram_results)\n",
     "\n",
     "# ヒストグラム結果をCSVに出力\n",
-    "histogram_df.to_csv('output/D_histogram_results_value.csv', index=False, encoding='utf-8-sig')\n",
+    "histogram_df.to_csv('output/Denso/D_histogram_results_value.csv', index=False, encoding='utf-8-sig')\n",
     "\n",
     "print(\"処理が完了しました。結果はaggregated_rank_results_value.csvとhistogram_results_value.csvに保存されました。\")\n"
    ]
